# mini_c_compiler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
src/: main.cpp
src/assembly/: gencode.cpp  gencode.h
src/assembly/backend/: backend.h
src/assembly/backend/x86_64/: x86_64.h
src/common/: defs.h
src/lib/: print.c
src/parser/: BinaryExpNode.h  ExprNode.h  StatementNode.h  UnaryExpNode.h  parser.cpp  parser.h
src/scanner/: scanner.cpp  scanner.h
src/semantic/: semantic.cpp  semantic.h
test/04_assembly/: input03  input04
test/06_variables/: input04
test/07_comparisons/: input04
test/08_if_statement/: input05
test/09_while_statement/: mktests  runtests
test/10_for_loops/: input07  mktests  runtests
test/11_functions/: mktests  runtests
test/12_types/: input11  input12  mktests  out.input11  runtests
test/13_functions_pt2/: input15  out.input15  runtests
test/15_pointers/: input16.c  mktests  out.input16.c  runtests
test/18_lvalues_revisited/: input18a.c  out.input18a.c  runtests
test/19_Arrays/: input21.c  runtests
test/20_string_literals/: runtests
test/21_more_operators/: runtests
test/23_local_variables/: input26.c  out.input26.c  runtests
test/24_func_param/: input01.c  input02.c  input12.c  input14.c  input29.c  input30.c  input31.c  input32.c  input33.c  input34.c  input35.c  input36.c  input37.c  input38.c  input39.c  out.input29.c  out.input33.c  out.input39.c  runtests
